[Misc] Upgrade the HTML5 Validator (NU validator).

--- a/xwiki-platform-tools/xwiki-platform-tool-standards-validator/src/test/resources/html5-valid.html
+++ b/xwiki-platform-tools/xwiki-platform-tool-standards-validator/src/test/resources/html5-valid.html
@@ -23,6 +23,7 @@
             <a href="link2">Link 2</a>
         </nav>
         <article>
+            <h1>Title of rhe article</h1>
             <header>
                 header
             </header>
